--- a/.github/workflows/build-apk-imagetoolbox.yml
+++ b/.github/workflows/build-apk-imagetoolbox.yml
@@ -72,8 +72,8 @@ jobs:
             if [[ "$apk" == *"arm64-v8a"* ]] && [[ "$apk" != *"foss"* ]]; then
               $ANDROID_SDK_PATH sign \
                 --ks "./keystore.p12" \
-                --ks-key-alias ${{ secrets.ALIAS }} \
-                --ks-pass pass:${{ secrets.KEYSTORE_PASSWORD }} \
+                --ks-key-alias "${{ secrets.KEY_ALIAS }}" \
+                --ks-pass "pass:${{ secrets.KEYSTORE_PASSWORD }}" \
                 --ks-type PKCS12 \
                 --out "./imagetoolbox-${{ env.BUILD_DATE }}.apk" \
                 "$apk"
